--- a/SPRING4_SERVLET3/pom.xml
+++ b/SPRING4_SERVLET3/pom.xml
@@ -31,6 +31,16 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>${spring.version}</version>
 		</dependency> 
+		<dependency>
+		   <groupId>org.springframework</groupId>
+		   <artifactId>spring-websocket</artifactId>
+		   <version>${spring.version}</version>
+		</dependency>
+		<dependency>
+		   <groupId>org.springframework</groupId>
+		   <artifactId>spring-messaging</artifactId>
+		   <version>${spring.version}</version>
+		</dependency>
 		
 		<!-- Mybatis 3.0 -->
 		<dependency>
@@ -69,7 +79,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.infinispan</groupId>
-			<artifactId>infinispan-spring</artifactId>
+			<artifactId>infinispan-spring4</artifactId>
 			<version>${infinispan.version}</version>
 		</dependency>
 		
@@ -142,6 +152,17 @@
 			<version>9.1-901.jdbc4</version>
 		</dependency>
         
+        <dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>2.3.0</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.3.0</version>
+		</dependency>
 	</dependencies>
 	
 	<repositories>
